megracion de spring boot 2.7 a 3.0

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,10 @@ spring:
     username: postgres
     url: jdbc:postgresql://localhost:5432/flujo-efectivo
     password: postgre
+  spring:
+    mvc:
+      pathmatch:
+        matching-strategy: ant_path_matcher
 
 ---
 spring:
